--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_screen"
-    tools:context="webgentechnologies.com.myprayerapp.activity.ForgotPasswordActivity">
+    tools:context="webgentechnologies.com.myprayerapp.activity.ForgotPasswordOneActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
