--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -93,11 +93,18 @@
             android:textSize="18sp" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_pwd_chk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/linearLayout_resetPwd_retype" />
     <Button
         android:id="@+id/btn_resetPwd"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@+id/linearLayout_resetPwd_retype"
+        android:layout_below="@+id/tv_pwd_chk"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="20dp"
